fix: 1.2 upgrade